--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -14,5 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="register"></Button>
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></ImageView>
 
 </LinearLayout>
