--- a/app/src/main/res/layout/layout_item_banner.xml
+++ b/app/src/main/res/layout/layout_item_banner.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_200">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <com.youth.banner.Banner
-        android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></com.youth.banner.Banner>
+        android:layout_height="@dimen/dp_150"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/color_gray_line"
+        android:id="@+id/banner">
+    </com.youth.banner.Banner>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
