--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.myshop.ui.home.HomeFragment"
+        android:name="com.myshop.ui.home.NewHomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_new_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
